--- a/HGNN/analyse/Analyze multiple experiments.ipynb
+++ b/HGNN/analyse/Analyze multiple experiments.ipynb
@@ -24,10 +24,12 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
+    "sys.path.insert(1, '../train')\n",
+    "sys.path.insert(1, '../misc')\n",
     "\n",
-    "from myhelpers import config_plots, TrialStatistics\n",
-    "from HGNN.train.configParser import getModelName, ConfigParser\n",
-    "from HGNN.train import CNN\n",
+    "import config_plots, TrialStatistics\n",
+    "from configParser import getModelName, ConfigParser\n",
+    "import CNN\n",
     "\n",
     "config_plots.global_settings()"
    ]
@@ -50,30 +52,9 @@
     "\n",
     "experiment_list = [\n",
     "#     {\n",
-    "#        'experimentName': \"biology_paper_hard_HGNN_constant_lambda\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_hard_HGNN_adaptive_lambda\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_hard_BB\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_medium_HGNN_constant_lambda\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
     "#        'experimentName': \"biology_paper_easy_curated3_50_30\",\n",
     "#        'experimentHash': ['0e4047f9cdcfde1594d90ba13febd488a418c214062a321128c913ef',\n",
     "#                          'a6ed28549ef4c01a13e6ed3a3f7d71a6f1dfa93a87bbf069614db132']\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_medium_curated3_50_30\",\n",
-    "#        'experimentHash': ['4409ee41fd0f35fa8e7b74d2c43ee1fc3b21fc07fc2b8cf0e73b248a',\n",
-    "#                          '8cfa4d66f84aa8a449c7b08a577cd3cbeaed4558f2f2e77b7edda21c']\n",
     "#     },\n",
     "    {\n",
     "       'experimentName': \"biology_paper_easy_curated4_Medium\",\n",
@@ -83,40 +64,8 @@
     "       'experimentName': \"biology_paper_easy_curated4_Easy_smaller\",\n",
     "       'experimentHash': None\n",
     "    },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_curated4_Easy200_2\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#         {\n",
-    "#        'experimentName': \"biology_paper_curated4_Medium_noaggregation\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_easy_HGNN_adaptive_lambda\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_easy_BB\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#     {\n",
-    "#        'experimentName': \"biology_paper_curated4_Medium_notpretrained\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#         {\n",
-    "#        'experimentName': \"biology_paper_curated4_Medium2\",\n",
-    "#        'experimentHash': None\n",
-    "#     },    {\n",
-    "#        'experimentName': \"biology_paper_easy_curated4_Easy_200\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
-    "#         {\n",
-    "#        'experimentName': \"biology_paper_curated4_Easy200_2\",\n",
-    "#        'experimentHash': None\n",
-    "#     },\n",
     "]\n",
     "\n",
-    "# figures_subpath = os.path.join('biologypaper_newdataset', 'curated4_augmnentation')\n",
     "figures_subpath = os.path.join('biologypaper_newdataset', 'curated4_MEE_review')\n",
     "\n",
     "figsize=(24, 10)\n",
