--- a/HGNN/train/Train.ipynb
+++ b/HGNN/train/Train.ipynb
@@ -48,7 +48,7 @@
     "import TrialStatistics\n",
     "import CNN\n",
     "import dataLoader\n",
-    "from configParser import ConfigParser, getModelName, getDatasetName\n",
+    "from configParser import ConfigParser, getModelName\n",
     "config_plots.global_settings()"
    ]
   },
@@ -767,7 +767,6 @@
     "            row_information = {\n",
     "                'experimentName': experimentName,\n",
     "                'modelName': modelName,\n",
-    "                'datasetName': getDatasetName(config_parser.fixPaths(experiment_params)),\n",
     "                'experimentHash': experimentHash,\n",
     "                'trialHash': trialHash\n",
     "            }\n",
