--- a/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "selected_hyperp_params = [\n",
     "    {\"modelType\": \"BB\"},\n",
-    "    {\"modelType\": \"HGNN_add\"},\n",
+    "    {\"modelType\": \"HGNN\"},\n",
     "]\n",
     "\n",
     "cp.write(params, selected_hyperp_params)\n",
