--- a/HGNN/analyse/Saliency Maps - image-BB.ipynb
+++ b/HGNN/analyse/Saliency Maps - image-BB.ipynb
@@ -55,9 +55,16 @@
     "dataPath=\"/raid/elhamod/Fish/Curated4\" # Where data is\n",
     "experimentName=\"Easy\"\n",
     "\n",
+    "# The model being used:\n",
     "trial_hash=\"d9694ce782a31c723858eb68cdd0cbaf8ef97b5b945a625d3b465667\" #BB\n",
     "\n",
+    "# The image being used:\n",
     "fileName= '/raid/elhamod/Fish/Curated4/Easy_50/test/Notropis nubilus/INHS_FISH_81913.jpg'\n",
+    "\n",
+    "# patches to be applied for occlusion (pixels)\n",
+    "patch_sizes = [49]\n",
+    "# How many patches to be applied\n",
+    "num_of_occlusion_iterations = 4\n",
     "\n",
     "cuda=0"
    ]
@@ -392,9 +399,9 @@
     }
    ],
    "source": [
-    "for i in [49]: #9, 19, 29 ,39 ,\n",
+    "for i in patch_sizes:\n",
     "    print('box_width = ', i)\n",
-    "    saliencyMap.GetSaliencyMap(fileName,layerName,box_width =i, maxCovered=True, topk=4, use_gpu=True)"
+    "    saliencyMap.GetSaliencyMap(fileName,layerName,box_width =i, maxCovered=True, topk=num_of_occlusion_iterations, use_gpu=(cuda is not None))"
    ]
   }
  ],
