--- a/HGNN/analyse/Saliency Maps - stats-HGNN.ipynb
+++ b/HGNN/analyse/Saliency Maps - stats-HGNN.ipynb
@@ -55,9 +55,13 @@
     "dataPath=\"/raid/elhamod/Fish/Curated4\" # Where data is\n",
     "experimentName=\"Easy\"\n",
     "\n",
+    "# The model being used:\n",
     "trial_hash=\"268af0509863b63158fbca64174789deb89ce5648a76506daf7f8db5\" #HGNN\n",
     "\n",
+    "# Dataloader workers\n",
     "num_workers=8\n",
+    "\n",
+    "# Size of the patch used in occlusion (pixels)\n",
     "patchsize=49\n",
     "\n",
     "cuda=1"
@@ -239,7 +243,7 @@
     "            for i, fileName in enumerate(fileNames):\n",
     "                fileName_base = fileName_bases[i]\n",
     "                if topk > 0:\n",
-    "                    _, A = saliencyMap.GetSaliencyMap(fileName,layerName,box_width =box_width, maxCovered=True, topk=topk, plot=False, use_gpu=True,generate_all_steps=False)\n",
+    "                    _, A = saliencyMap.GetSaliencyMap(fileName,layerName,box_width =box_width, maxCovered=True, topk=topk, plot=False, use_gpu=(cuda is not None),generate_all_steps=False)\n",
     "                else:\n",
     "                    isSpecies = (layerName == \"fine\")\n",
     "                    activationOutputs = {\n",
