--- a/HGNN/analyse/Analyze multiple experiments-BBvsHGNN.ipynb
+++ b/HGNN/analyse/Analyze multiple experiments-BBvsHGNN.ipynb
@@ -65,13 +65,14 @@
     "# The subpath where the figure will be saved.\n",
     "figures_subpath = 'pretraining_BBvsHGNN'\n",
     "\n",
+    "# Misc figure params\n",
     "figsize=(24, 10)\n",
     "ylabel = \"accuracy (f1-score)\"\n",
     "xlabel = \"model\"\n",
     "xticks = [3]\n",
     "xticklabels = [\"\"] \n",
     "\n",
-    "\n",
+    "# Cuda\n",
     "cuda=0"
    ]
   },
