--- a/HGNN/train/Train.ipynb
+++ b/HGNN/train/Train.ipynb
@@ -21,12 +21,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Constants"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "experimetnsFileName = \"experiments.csv\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
    ]
   },
   {
@@ -749,7 +763,7 @@
     "        print(experiment_params)\n",
     "        experimentHash =TrialStatistics.getTrialName(experiment_params)\n",
     "\n",
-    "        # load images \n",
+    "        # load dataset \n",
     "        datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
     "        datasetManager.updateParams(config_parser.fixPaths(experiment_params))\n",
     "        train_loader, validation_loader, test_loader = datasetManager.getLoaders()\n",
