PhloNN and cross-validation

--- a/HGNN/dataPrep/3- Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/3- Create cleaned metadata.ipynb
@@ -31,13 +31,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataPath=\"/raid/elhamod/Fish/Curated3/\"\n",
-    "image_path='Easy'\n",
-    "output_directory_name=\"curated_30_50\" #curated_minimum5images\"#\"biology_paper_cleaned_30max\"\n",
-    "output_cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
+    "dataPath=\"/raid/elhamod/Fish/Curated5/\"\n",
+    "# image_path='Easy'\n",
+    "\n",
     "input_species_csv_fileName = \"cleaned_metadata.csv\"#\"biology_paper_cleaned_all/cleaned_metadata.csv\"\n",
+    "\n",
+    "output_directory_name=\"Easy_30\" #curated_minimum5images\"#\"biology_paper_cleaned_30max\"\n",
+    "output_cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
+    "\n",
     "numberOfImagesPerSpecies_min =30 # If None, no min\n",
-    "numberOfImagesPerSpecies_toKeep =50 # If None, keep all"
+    "numberOfImagesPerSpecies_toKeep =30 # If None, keep all"
    ]
   },
   {
@@ -72,26 +75,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output                   fileName         scientificName        Genus      Family\n",
-      "13     INHS_FISH_48349.JPG    Alosa chrysochloris        Alosa   Clupeidae\n",
-      "21    INHS_FISH_106186.JPG    Alosa chrysochloris        Alosa   Clupeidae\n",
-      "44      INHS_FISH_5773.JPG    Alosa chrysochloris        Alosa   Clupeidae\n",
-      "58     INHS_FISH_25323.JPG    Alosa chrysochloris        Alosa   Clupeidae\n",
-      "23    INHS_FISH_105918.JPG    Alosa chrysochloris        Alosa   Clupeidae\n",
-      "...                    ...                    ...          ...         ...\n",
-      "6372   INHS_FISH_19332.jpg  Phenacobius mirabilis  Phenacobius  Cyprinidae\n",
-      "6405   INHS_FISH_91842.jpg  Phenacobius mirabilis  Phenacobius  Cyprinidae\n",
-      "6302   INHS_FISH_25634.jpg  Phenacobius mirabilis  Phenacobius  Cyprinidae\n",
-      "6442   INHS_FISH_57438.jpg  Phenacobius mirabilis  Phenacobius  Cyprinidae\n",
-      "6386   INHS_FISH_16284.jpg  Phenacobius mirabilis  Phenacobius  Cyprinidae\n",
+      "output                    fileName      Family       Genus       scientificName\n",
+      "35     INHS_FISH_105918.JPG   Clupeidae       Alosa  Alosa chrysochloris\n",
+      "45      INHS_FISH_99256.JPG   Clupeidae       Alosa  Alosa chrysochloris\n",
+      "35070    UWZM-F-0000003.JPG   Clupeidae       Alosa  Alosa chrysochloris\n",
+      "28      INHS_FISH_56969.JPG   Clupeidae       Alosa  Alosa chrysochloris\n",
+      "77        INHS_FISH_066.JPG   Clupeidae       Alosa  Alosa chrysochloris\n",
+      "...                     ...         ...         ...                  ...\n",
+      "35051       OSUM0008121.jpg  Cyprinidae  cyprinella  cyprinella whipplei\n",
+      "35059     OSUM0008089_1.jpg  Cyprinidae  cyprinella  cyprinella whipplei\n",
+      "35053       OSUM0008131.jpg  Cyprinidae  cyprinella  cyprinella whipplei\n",
+      "35027       OSUM0008092.jpg  Cyprinidae  cyprinella  cyprinella whipplei\n",
+      "35025     OSUM0008101_1.jpg  Cyprinidae  cyprinella  cyprinella whipplei\n",
       "\n",
-      "[1900 rows x 4 columns]\n"
+      "[3450 rows x 4 columns]\n"
      ]
     }
    ],
    "source": [
     "# get metadata file\n",
-    "metadata_csv_df = pd.read_csv(os.path.join(dataPath ,image_path, input_species_csv_fileName), sep='\\t')\n",
+    "metadata_csv_df = pd.read_csv(os.path.join(dataPath, input_species_csv_fileName), sep='\\t')\n",
     "\n",
     "# find species that have a specific number of images\n",
     "grouped_by = metadata_csv_df['scientificName'].value_counts()\n",
@@ -112,7 +115,7 @@
     "print('output', trimmed)\n",
     "\n",
     "# save the file\n",
-    "path = os.path.join(dataPath ,image_path, output_directory_name)\n",
+    "path = os.path.join(dataPath, output_directory_name)\n",
     "try:\n",
     "    os.mkdir(path)\n",
     "except:\n",
@@ -155,5 +158,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
