--- a/HGNN/dataPrep/4- Create folder dataset.ipynb
+++ b/HGNN/dataPrep/4- Create folder dataset.ipynb
@@ -29,9 +29,9 @@
     "cleaned_fine_csv_fileName = \"cleaned_metadata.csv\"\n",
     "data_root = \"/raid/elhamod/Fish\"#\"/data/BGNN_data/INHS_cropped\"\n",
     "source_suffix_list=[\"cropped2/FMNH\", \"cropped2/OSUM\", \"cropped2/INHS\", \"cropped2/JFBM\", \"cropped2/UWZM\"]\n",
-    "suffix = \"Curated3/Hard/curated_30_50\"\n",
+    "suffix = \"Curated5/Easy_50\"\n",
     "training_count=0.64\n",
-    "validation_count=0.16"
+    "validation_count=0.0#0.16"
    ]
   },
   {
@@ -102,9 +102,12 @@
     "\n",
     "train_indices, test_indices = train_test_split(range(fine_csv_size), test_size= 1-training_count-validation_count, \n",
     "                                                            stratify=labels)\n",
-    "labels_sub = labels[train_indices]\n",
-    "train_indices, val_indices = train_test_split(train_indices, test_size= validation_count/(validation_count+training_count), \n",
-    "                                                            stratify=labels_sub)"
+    "\n",
+    "val_indices=[]\n",
+    "if validation_count > 0:\n",
+    "    labels_sub = labels[train_indices]\n",
+    "    train_indices, val_indices = train_test_split(train_indices, test_size= validation_count/(validation_count+training_count), \n",
+    "                                                                stratify=labels_sub)"
    ]
   },
   {
@@ -155,12 +158,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68985c0933cd407d9d644c000b73c309",
+       "model_id": "63da5b473c7f4165aede65966eb39422",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=3124.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=3008.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -186,12 +189,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "476b166a58c5485e8a15f65a0bcdbc8d",
+       "model_id": "c18261f62a0a447ea4bf0e501a9a7886",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=781.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -217,12 +220,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45a35a5bdbbb4be2ac4abec6a11bddbd",
+       "model_id": "6354a9bb6416451483b1fb46f4edbf4e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=977.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=1692.0), HTML(value='')))"
       ]
      },
      "metadata": {},
