--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Fish30-5runs\"\n",
+    "experimentName = \"Fish30-5run-PhyloNN7\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -42,37 +42,38 @@
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"Curated4/Easy_30\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
     "    \"suffix\":None, \n",
+    "    \"useCrossValidation\": True,\n",
     "    \n",
     "    # dataset\n",
     "    \"img_res\": 448, #224 #32, 448\n",
     "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, #128, # Bigger is more stable (256)\n",
-    "    \"learning_rate\": 0.001,#0.001, is best #0.0001,#0.1, #0.01, #0.0003, # 0.00005\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\": 0.001,  # 0.1,#0.001,#0.001, is best #0.0001,#0.1, #0.01, #0.0003, # 0.00005\n",
+    "    \"numOfTrials\":5, #5\n",
     "    \"fc_layers\": 1,\n",
     "    \"pretrained\": True,\n",
-    "    \"epochs\": 120,\n",
+    "    \"epochs\": 120, #120\n",
     "    \"patience\": -1,#12,#-1, # None = \"epochs\"\n",
-    "    \"optimizer\": \"adabelief\",#\"Adam\",\n",
+    "    \"optimizer\": \"adabelief\", # \"SGD\",#\"adabelief\",#\"Adam\",\n",
     "    \"scheduler\": \"plateau\",\n",
-    "    \"weightdecay\": 0.01, #0.0001\n",
+    "    \"weightdecay\": 0.01, #0.0001, #0.01, #0.0001\n",
     "    \"scheduler_gamma\":0.5,\n",
-    "    \"scheduler_patience\":10,   \n",
+    "    \"scheduler_patience\":15,   \n",
     "    \n",
     "#     Cifar\tlr1e-3\tweightdecay5e-4\n",
     "# ImageNet\tlr1e-3\tweightdecay1e-2\n",
     "    \n",
-    "    \"modelType\":\"BB\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\" \n",
+    "    \"modelType\":\"PhyloNN\", #BB DISCO DSN HGNN  \"exRandomFeatures\" \"PhyloNN\" ####HGNN_cat \"HGNN_add\" \n",
     "    \n",
-    "    \"lambda\": 0,#0.01,\n",
+    "    \"lambda\": 1,#0.01, \n",
     "    \"two_phase_lambda\": False,\n",
     "\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
     "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "    \n",
-    "    \"adaptive_smoothing\": True,\n",
+    "    \"adaptive_smoothing\": False,\n",
     "    \"adaptive_lambda\": 0.1,#0.015, #optimized for time\n",
     "    \"adaptive_alpha\": 0.5,#0.8, #optimized for time\n",
     "    \n",
@@ -85,8 +86,14 @@
     "    \n",
     "    \"L1reg\": False,\n",
     "\n",
-    "\n",
     "    \"phylogeny_loss\": False, \n",
+    "    \n",
+    "    \"grayscale\": False, #Keep False\n",
+    "    \"tl_extralayer\": False, #Keep False\n",
+    "    \"random_fitting\": False, #Keep False\n",
+    "    \n",
+    "    \"phyloDistances\": \"0.75,0.5,0.25\",\n",
+    "    \"addKernelOrthogonality\":False,\n",
     "}\n",
     "\n",
     "experimentsPath= \"/raid/elhamod/Fish/experiments/\" # \"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
@@ -108,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/Fish30-5runs/params.json'"
+       "'/raid/elhamod/Fish/experiments/Fish30-5run-PhyloNN7/params.json'"
       ]
      },
      "execution_count": 3,
@@ -271,11 +278,20 @@
     "#     {'displayName': 'Fish-224scratch-triplet', \"img_res\": 224, \"pretrained\": False, \"tripletEnabled\": True},\n",
     "#     {'displayName': 'Fish-224scratch-triplet-normal', \"img_res\": 224, \"pretrained\": False, \"tripletEnabled\": True, \"regularTripletLoss\": False}\n",
     "\n",
-    "    {'displayName': 'Fish30-5runs-BB'},\n",
-    "    {'displayName': 'Fish30-5runs-MSE',\"phylogeny_loss\": \"MSE\"},\n",
-    "    {'displayName': 'Fish30-5runs-hiertriplet',\"tripletEnabled\": True, \"batchSize\": 100},\n",
-    "    {'displayName': 'Fish30-5runs-hiertripletAndMSE',\"tripletEnabled\": True,\"phylogeny_loss\": \"MSE\" , \"batchSize\": 100},\n",
-    "    {'displayName': 'Fish30-5runs-normaltriplet',\"tripletEnabled\": True, \"regularTripletLoss\": True, \"batchSize\": 100},\n",
+    "    \n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-adaptive', \"adaptive_smoothing\": True},\n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-lambda0.1', \"lambda\": 0.1},\n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-adaptive-alpha0.1-lambd15', \"adaptive_smoothing\": True, \"adaptive_alpha\": 0.1,\"adaptive_lambda\": 15},\n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-base'},\n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-lambda0.01', \"lambda\": 0.01},\n",
+    "#     {'displayName': 'Fish50-5run-BB-finetuning-adaptive-alpha0.3-lambd15', \"adaptive_smoothing\": True, \"adaptive_alpha\": 0.3,\"adaptive_lambda\": 15},\n",
+    "    \n",
+    "   \n",
+    "#     {'displayName': 'Fish50-5run-HGNN-crossval-5fold-2'},\n",
+    "#     {'displayName': 'Fish30-5runs-MSE',\"phylogeny_loss\": \"MSE\"},\n",
+    "#     {'displayName': 'Fish30-5runs-hiertriplet',\"tripletEnabled\": True, \"batchSize\": 100},\n",
+    "#     {'displayName': 'Fish30-5runs-hiertripletAndMSE',\"tripletEnabled\": True,\"phylogeny_loss\": \"MSE\" , \"batchSize\": 100},\n",
+    "#     {'displayName': 'Fish30-5runs-normaltriplet',\"tripletEnabled\": True, \"regularTripletLoss\": True, \"batchSize\": 100},\n",
     "#     {'displayName': 'Fish30-hier-constantlambda0.1', \"tripletEnabled\": True, \"adaptive_smoothing\": False, \"lambda\": 0.1},\n",
     "#     {'displayName': 'Fish30-hier-constantlambda0.2', \"tripletEnabled\": True, \"adaptive_smoothing\": False, \"lambda\": 0.2},\n",
     "#     {'displayName': 'Fish30-hier-layer3', \"tripletEnabled\": True, \"triplet_layers_dic\": \"layer3,layer4\",},\n",
@@ -284,8 +300,17 @@
     "    \n",
     "    # To be used later\n",
     "#     {'displayName': 'Fish-milestone-triplet-hier', \"tripletEnabled\": True},\n",
-    "#     {'displayName': 'Fish-milestone-BB'},\n",
-    "#     {'displayName': 'Fish-milestone-HGNN',\"modelType\":\"HGNN\"},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-adaptivelambda-intraKorthogonality', \"addKernelOrthogonality\":True, \"adaptive_smoothing\": True},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-lambda1'},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-lambda0.1', \"lambda\": 0.1},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-adaptivelambda-alpha0.05-intraKorthogonality2', \"addKernelOrthogonality\":True, \"adaptive_smoothing\": True,\"adaptive_lambda\": 0.1, \"adaptive_alpha\": 0.05},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-smalldistances-intraKorthogonality', \"addKernelOrthogonality\":True, \"phyloDistances\": \"0.5,0.3,0.1\"},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-largedistances', \"phyloDistances\": \"0.9,0.7,0.5\"},\n",
+    "    {'displayName': 'Fish30-5run-PhyloNN-intraKorthogonality', \"addKernelOrthogonality\":True},\n",
+    "#     {'displayName': 'Fish30-5run-SGD10-BB1momentumweightdecay10-4', \"modelType\":\"BB\"},\n",
+    "#     {'displayName': 'Fish-crossval-HGNN-Fish50',\"modelType\":\"HGNN\"},\n",
+    "#     {'displayName': 'Fish-crossval-BB-SGDfaster-Fish30',  \"learning_rate\": 0.1,  \"optimizer\": \"SGD\", \"image_path\": \"Curated4/Easy_30\"},\n",
+    "#     {'displayName': 'Fish-crossval-HGNN-Fish30',\"modelType\":\"HGNN\", \"image_path\": \"Curated4/Easy_50\"},\n",
     "#     {'displayName': 'Fish-milestone-triplet-normal', \"tripletEnabled\": True, \"regularTripletLoss\": True},\n",
     "#     {'displayName': 'Fish-milestone-DISCO',\"modelType\":\"DISCO\"},\n",
     "\n",
@@ -304,16 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-BB', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/d5cb3503ea225692caefee6fbb34cf8657aec723adb53d1c93d0ffad\n",
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 128, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': 'MSE', 'displayName': 'Fish30-5runs-MSE', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/5aca2f765805f89fb5f676e4f34447d2268e14eb7e727a06d01024d2\n",
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-hiertriplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/4f2561522c5b25cca87e3274953ba031418f6f7a68577eb42f76277c\n",
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': 'MSE', 'displayName': 'Fish30-5runs-hiertripletAndMSE', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/70216afe7cf5e3ae7960b7af27304d7cc9fd0c8b483a573d85570e6f\n",
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'img_res': 448, 'augmented': True, 'batchSize': 100, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 10, 'modelType': 'BB', 'lambda': 0, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': True, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'displayName': 'Fish30-5runs-normaltriplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/a8533bcf40e28b6000c61b95c33dfcf1b041ebcc601aad4ae4db35a9\n"
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'useCrossValidation': True, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'PhyloNN', 'lambda': 1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.75,0.5,0.25', 'addKernelOrthogonality': True, 'displayName': 'Fish30-5run-PhyloNN-intraKorthogonality', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/939a94b44c94705f834139f96c9567ac60813f32ed14316382c0c7ec\n"
      ]
     }
    ],
@@ -322,27 +339,6 @@
     "    print(i)\n",
     "    print(getModelName(i))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
