--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -111,9 +111,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "elhamod_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "elhamod_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -125,9 +125,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
